# disrecord

./: .gitignore  Cargo.toml
src/: discord.rs  main.rs  parser.rs  recorder.rs  voice_handler.rs
src/commands/: finish.rs  mod.rs  rejoin.rs  start.rs
src/commands/voice/: join.rs  leave.rs  mod.rs
src/commands/voice/recording/: finish.rs  mod.rs  record.rs
src/recorder/: mod.rs  record_manager.rs  recorder.rs  voice_receiver.rs  voice_writer.rs
src/recorder/writer/: call_writer.rs  mod.rs  stream_writer.rs  zipper.rs
src/recorder/writer/muxer/: crc.rs  mod.rs  ogg.rs  ogg_opus.rs  opus_toc.rs
